# ViTRA

./: .gitignore  Makefile  README.md  pyproject.toml  run-5o1hloxk.wandb
configs/: Classification_FGVGAircraft.yaml  Classification_SBDataset.yaml  DeMo_GP_classification.yaml  DeMo_GP_segmentation.yaml  Segmentation_SBDataset.yaml  classification.yaml  segmentation.yaml
files/: config.yaml  wandb-metadata.json  wandb-summary.json
notebooks/: analysis.ipynb
results/: cls_sb_dataframe.pkl  fgvg_dataframe.pkl  seg_sb_dataframe.pkl
source/: README.md  evaluate.py  setup.py  train.py
source/experiments/: Ablation_Sweep.py  DeMO_GP_classification.py  DeMo_GP_classification.py  DeMo_GP_segmentation.py  classification.py  segmentation.py
source/utils/: AdvAttack.py  BestModelLogger.py  BoundaryIoU.py  HausdorffDistance95.py  MaskedHausdorffDistance.py  SBDatasetMutlilabel.py  SweepUtils.py
wandb/: latest-run
wandb/run-20260121_150030-tkhnkjjq/files/: requirements.txt  wandb-metadata.json
